[gd_scene load_steps=19 format=3 uid="uid://dc474oplf21pn"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_uvsmp"]
[ext_resource type="Texture2D" uid="uid://t1ioy7503aur" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Running (32 x 32).png" id="2_uyxn4"]
[ext_resource type="Texture2D" uid="uid://c46nwa6ti3usg" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Idle (32 x 32).png" id="3_cp0hp"]
[ext_resource type="Texture2D" uid="uid://d4akaqju4t7m8" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Jumping (32 x 32).png" id="4_af0re"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jcsgn"]
size = Vector2(15.7407, 15.25)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ktk4"]
atlas = ExtResource("2_uyxn4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhv8e"]
atlas = ExtResource("2_uyxn4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_guino"]
atlas = ExtResource("2_uyxn4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfftq"]
atlas = ExtResource("2_uyxn4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3jgt"]
atlas = ExtResource("3_cp0hp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpqvi"]
atlas = ExtResource("3_cp0hp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qsv1"]
atlas = ExtResource("4_af0re")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u27ee"]
atlas = ExtResource("2_uyxn4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha3r4"]
atlas = ExtResource("2_uyxn4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6s8q"]
atlas = ExtResource("2_uyxn4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iasue"]
atlas = ExtResource("2_uyxn4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3yqeb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ktk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhv8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guino")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfftq")
}],
"loop": true,
"name": &"andando",
"speed": 2.8
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3jgt")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_qpqvi")
}],
"loop": true,
"name": &"idle",
"speed": 0.1
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qsv1")
}],
"loop": true,
"name": &"pulo",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u27ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha3r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6s8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iasue")
}],
"loop": true,
"name": &"run",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hs1b"]
size = Vector2(15.3226, 12.4996)

[node name="player" type="CharacterBody2D"]
position = Vector2(-77, -105)
collision_mask = 7
script = ExtResource("1_uvsmp")

[node name="CollisionPlayer" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(75.5, 101)
scale = Vector2(1.08, 1)
shape = SubResource("RectangleShape2D_jcsgn")

[node name="anim" type="AnimatedSprite2D" parent="."]
physics_interpolation_mode = 1
position = Vector2(75.4093, 94.2485)
sprite_frames = SubResource("SpriteFrames_3yqeb")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.849949
speed_scale = 2.0

[node name="animator" type="AnimationPlayer" parent="."]

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2(17, -6)
collision_layer = 52
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
z_index = 1
position = Vector2(58.5, 106)
scale = Vector2(1.24, 0.96)
shape = SubResource("RectangleShape2D_1hs1b")
debug_color = Color(0.972028, 0, 0.443895, 0.42)

[node name="remote" type="RemoteTransform2D" parent="."]

[node name="ray_rigth" type="RayCast2D" parent="."]
position = Vector2(83.7, 104.6)
scale = Vector2(1, 2.8)
target_position = Vector2(8, 0)
collision_mask = 4

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(67, 105)
scale = Vector2(1, 3.44)
target_position = Vector2(-6, 0)
collision_mask = 4

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
